--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   google_sign_in: ^5.0.4
   google_sign_in_web: ^0.10.0
   shared_preferences: ^2.0.6
+  google_ml_kit: ^0.6.0
+  camera: ^0.8.1+3
+  image_picker: ^0.8.0+4
 
 dev_dependencies:
   flutter_test:
